Fixing a spacing issue with armor stats

--- a/app/src/scss/views/_item.scss
+++ b/app/src/scss/views/_item.scss
@@ -180,8 +180,6 @@
       margin-top: 5px;
 
       .armorStats {
-        line-height: 1;
-
         .stat {
           margin-top: 5px;
 
@@ -190,6 +188,8 @@
           }
 
           img {
+            vertical-align: middle;
+            margin-top: -2px;
             margin-right: 5px;
           }
         }
